--- a/medlife/pubspec.yaml
+++ b/medlife/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/Background.png
     - assets/Screenshot.svg
     - assets/Logo1.svg
     - assets/image11.svg
